--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "learning-cxx"]
 	path = learning-cxx
 	url = https://github.com/hechichu/learning-cxx.git
+[submodule "rustlings"]
+	path = rustlings
+	url = https://github.com/hechichu/rustlings.git
